# CoreFile

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CoreFile/: CoreFile.h
CoreFile/include/: CoreFile.h
CoreFile/src/: CoreFile.cpp
docs/: Doxyfile  mainpage.dox  site_info
include/: CoreFile.h  CoreFile_Utils.h
src/: CoreFile.cpp
